crates/permitlayer-daemon/src/design/snapshots/agentsso__design__render__tests__snapshot_kill_blocked_request_denied.snap
---
source: crates/permitlayer-daemon/src/design/render.rs
assertion_line: 1031
expression: "snapshot_event(\"kill-blocked-request\", \"denied\")"
---
time      service  resource      outcome    agent         event               
15:02:14  gmail    messages/123  ▲ blocked  email-triage  kill-blocked-request
