crates/permitlayer-daemon/src/design/snapshots/agentsso__design__render__tests__snapshot_policy_violation_denied.snap
---
source: crates/permitlayer-daemon/src/design/render.rs
assertion_line: 996
expression: "snapshot_event(\"policy-violation\", \"denied\")"
---
time      service  resource      outcome    agent         event           
15:02:14  gmail    messages/123  ▲ blocked  email-triage  policy-violation
