crates/permitlayer-daemon/src/design/snapshots/agentsso__design__render__tests__snapshot_token_refresh_ok.snap
---
source: crates/permitlayer-daemon/src/design/render.rs
assertion_line: 991
expression: "snapshot_event(\"token-refresh\", \"ok\")"
---
time      service  resource      outcome  agent         event        
15:02:14  gmail    messages/123  ● ok     email-triage  token-refresh
